tests/purs/failing/3531-4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3531-4.purs:21:7 - 21:27 (line 21, column 7 - line 21, column 27)

  No type class instance was found for
  [33m           [0m
  [33m  Main.C a4[0m
  [33m         b5[0m
  [33m           [0m
  The following instances partially overlap the above constraint, which means the rest of their instance chains will not be considered:

    [33mMain.c1[0m
    [33mMain.c3[0m


while applying a function [33mc[0m
  of type [33mC @t0 @t1 t2 t3 => Proxy @t0 t2 -> Proxy @t1 t3 -> Boolean[0m
  to argument [33mProxy[0m
while inferring the type of [33mc Proxy[0m
in value declaration [33mfn[0m

where [33ma4[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mb5[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type
      [33mt3[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

